Change back to 0.0.6