@@ -11,19 +11,18 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <junit.version>5.8.2</junit.version>
-        <javafx.version>21</javafx.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>${javafx.version}</version>
+            <version>18.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>${javafx.version}</version>
+            <version>18.0.1</version>
         </dependency>
         <dependency>
             <groupId>de.jensd</groupId>
@@ -63,18 +62,12 @@
             <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
+                <version>0.0.6</version>
                 <executions>
                     <execution>
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>edu.northeastern.course.TheCodeCommandos.App</mainClass>
-                            <options>
-                                <option>--module-path</option>
-                                <option>${java.home}/lib/javafx-sdk-18/lib</option>
-                                <option>--add-modules</option>
-                                <option>javafx.controls,javafx.fxml</option>
-                            </options>
+                            <mainClass>edu.northeastern.course.TheCodeCommandos/edu.northeastern.course.TheCodeCommandos.App</mainClass>
                         </configuration>
                     </execution>
                 </executions>
